--- a/app/Resources/views/adminbase.html.twig
+++ b/app/Resources/views/adminbase.html.twig
@@ -9,9 +9,9 @@
         {% endblock %}
         <title>{% block title %}Kodastran Admin{% endblock %}</title>
         <!-- Generic top stylesheet -->
-        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/bootstrap/dist/css/bootstrap.min.css/style.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/fontawesome/dist/css/font-awesome.min.css/style.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/simple-line-icons/dist/css/simple-line-icons.min.css/style.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/bootstrap/dist/css/bootstrap.min.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/fontawesome/css/font-awesome.min.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/simple-line-icons/css/simple-line-icons.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('CoreUI/css/style.css') }}" type="text/css" />
 
 
@@ -41,7 +41,18 @@
 
     -->
 
-    <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+    <body class="{% block bodyclass %}{% endblock %}">
+        <header class="app-header navbar">
+          <button class="navbar-toggler mobile-sidebar-toggler hidden-lg-up" type="button">☰</button>
+          <a class="navbar-brand" href="#"></a>
+          <ul class="nav navbar-nav hidden-md-down">
+
+              {% block navbarelement %}
+                  
+              {% endblock %}
+
+          </ul>
+        </header>
         {% block body %}{% endblock %}
         <footer class="app-footer">
           {% block footer %}{% endblock%}
@@ -51,7 +62,7 @@
           <script src="{{ asset('CoreUI/bower_components/jquery/dist/jquery.min.js') }}"></script>
           <script src="{{ asset('CoreUI/bower_components/tether/dist/js/tether.min.js') }}"></script>
           <script src="{{ asset('CoreUI/bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-          <script src="{{ asset('CoreUI/bower_components/pace/pace.min.js') }}"></script>
+          
 
 
 
@@ -65,8 +76,8 @@
 
           <!-- Plugins and scripts required by this views -->
 
-          <!-- Custom scripts required by this view -->
-          <script src="{{ asset('CoreUI/js/views/main.js') }}"></script>
+          <!-- Custom scripts required by this view 
+          <script src="{{ asset('CoreUI/js/views/main.js') }}"></script>-->
         {% block javascripts %}{% endblock %}
     </body>
 </html>
