--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -33,7 +33,8 @@
                                     <input type="submit" id="_submit" class="btn btn-primary px-2" name="_submit" value="{{ 'security.login.submit'|trans }}" />
                                 </div>
                                 <div class="col-6 text-right">
-                                    <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                                    <a href="{{ path('fos_user_resetting_request') }}" class="btn btn-link px-0">Forgot password?</a>
+                                    
                                 </div>
                             </div>
                         </form>
