je comit pour ne pas perdre mes modifs

--- a/app/Resources/views/adminbase.html.twig
+++ b/app/Resources/views/adminbase.html.twig
@@ -18,6 +18,9 @@
         <!-- Generic favicon -->
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
         {% block stylesheets %}{% endblock %}
+        <style>
+            .has
+        </style>
 
     </head>
     <!-- BODY options, add following classes to body to change options
