Youpi les tests refonctionnent !!!

--- a/src/AppBundle/Resources/views/AdminUI/partial/_header.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/partial/_header.html.twig
@@ -21,7 +21,7 @@
 
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                             {{ 'salut' }}
-                            {{ 'layout.logged_in_as'|trans({'%user%': app.user}, 'FOSUserBundle') }} |
+                            {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
                             <a href="{{ path('fos_user_security_logout') }}">
                                 {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                             </a>
