--- a/src/AppBundle/Resources/views/AdminUI/partial/_header.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/partial/_header.html.twig
@@ -5,16 +5,17 @@
                 <li class="nav-item">
                     <a class="nav-link navbar-toggler sidebar-toggler" href="#">☰</a>
                 </li>
-
-                <li class="nav-item px-1">
-                    <a class="nav-link" href="#">Dashboard</a>
-                </li>
-                <li class="nav-item px-1">
-                    <a class="nav-link" href="#">Users</a>
-                </li>
-                <li class="nav-item px-1">
-                    <a class="nav-link" href="#">Settings</a>
-                </li>
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li class="nav-item px-1">
+                        <a class="nav-link" href="#">Acceuil</a>
+                    </li>
+                    <li class="nav-item px-1">
+                        <a class="nav-link" href="{{path('admin_polls')}}">Sondages</a>
+                    </li>
+                    <li class="nav-item px-1">
+                        <a class="nav-link" href="#">Options</a>
+                    </li>
+                {% endif %}
             </ul>
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item hidden-md-down">
