--- a/src/AppBundle/Resources/views/AdminUI/Poll/index.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/index.html.twig
@@ -1,47 +1,42 @@
-
 {% extends "::adminbase.html.twig" %}
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
 {% block main %}
-            <!-- Breadcrumb -->
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">Accueil</li>
-                <li class="breadcrumb-item"><a href="#">Admin</a>
-                </li>
-                <li class="breadcrumb-item active">Sondage</li>
-            </ol>
+    <!-- Breadcrumb -->
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">Accueil</li>
+        <li class="breadcrumb-item"><a href="#">Admin</a>
+        </li>
+        <li class="breadcrumb-item active">Sondage</li>
+    </ol>
 
+    <div class="container-fluid">
+        <a href="{{ path('admin_add_poll') }}" class="btn btn-primary btn-lg btn-block">
+            <i class="fa fa-plus-circle"></i> Créer un nouveau sondage
+        </a>
 
-
-            <div class="container-fluid">
-                <div class="row">
-                    <a href="{{ path('admin_add_poll') }}" class="col-md-12">
-                        <div class="btn btn-primary btn-lg btn-block ">
-                                            <div class="text-center"><i class="fa fa-plus-circle "></i>&nbsp; Créer un nouveau sondage</div>
-                        </div>
-                    </a>
-                </div>
-                <table class="table table-bordered table-striped table-condensed">
-                    <thead>
-                        <tr>
-                            <th>Titre</th>
-                            <th>Utilisateur</th>
-                            <th>Nb question</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for poll in polls %}
-                            <tr>
-                                <td>{{poll.title}}</td>
-                                <td>{{poll.user.email}}</td>
-                                <td></td>
-                                <td>
-                                    <button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i>&nbsp; Editer</button>
-                                    <button type="button" class="btn btn-danger"><i class="fa fa-trash"></i>&nbsp; Supprimer</button>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <!-- /.conainer-fluid -->
+        <table class="table table-bordered table-striped table-condensed">
+            <thead>
+            <tr>
+                <th>Titre</th>
+                <th>Utilisateur</th>
+                <th>Nb question</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for poll in polls %}
+                <tr>
+                    <td>{{ poll.title }}</td>
+                    <td>{{ poll.user.email }}</td>
+                    <td></td>
+                    <td>
+                        <button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i>&nbsp; Editer</button>
+                        <button type="button" class="btn btn-danger"><i class="fa fa-trash"></i>&nbsp; Supprimer
+                        </button>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <!-- /.conainer-fluid -->
 {% endblock %}
