Added pool creation form

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Kodastran Admin Login{% endblock %}
 {% block bodyclass %}app header-fixed footer-fixed{% endblock %}
 
-{% block body %}
+{% block main %}
         <br>
         <br>
         <br>
