--- a/src/AppBundle/Resources/views/AdminUI/Poll/index.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/index.html.twig
@@ -1,18 +1,7 @@
 
 {% extends "::adminbase.html.twig" %}
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
-{% block body %}
-<div class="app-body">
-    <div class="sidebar">
-            <nav class="sidebar-nav">
-                <ul class="nav">
-                </ul>
-            </nav>
-        </div>
-
-        <!-- Main content -->
-        <main class="main">
-
+{% block main %}
             <!-- Breadcrumb -->
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">Accueil</li>
@@ -25,7 +14,7 @@
 
             <div class="container-fluid">
                 <div class="row">
-                    <a href="#" class="col-md-12">
+                    <a href="{{ path('admin_add_poll') }}" class="col-md-12">
                         <div class="btn btn-primary btn-lg btn-block ">
                                             <div class="text-center"><i class="fa fa-plus-circle "></i>&nbsp; Créer un nouveau sondage</div>
                         </div>
@@ -55,6 +44,4 @@
                 </table>
             </div>
             <!-- /.conainer-fluid -->
-        </main>
-    </div>
 {% endblock %}
