Admin/AddPoll: l'action du formulaire est stockée en JS

--- a/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
@@ -32,6 +32,8 @@
       var STRINGS = Object.freeze({
         save: "{{ 'save'|trans }}"
       });
+
+      var FORM_ACTION = 'https://google.fr';
     </script>
     <script src="{{ asset('admin-interface/dist/manifest.js') }}"></script>
     <script src="{{ asset('admin-interface/dist/vendor.js') }}"></script>
