--- a/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
@@ -1,4 +1,7 @@
 {% extends "::adminbase.html.twig" %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('/css/kdt-inputs.css')}}" type="text/css" />
+{% endblock %}
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
 {% block main %}
     <!-- Breadcrumb -->
@@ -12,19 +15,10 @@
     <div class="container-fluid">
         <div id="app"></div>
 
-        <div style="display: none;">
-            {{ form(form) }}
-            {{ form_start(form) }}
-
-            {{ form_row(form.title) }}
-            {{ form_row(form.description) }}
-
-            <button class="btn btn-success">{{ 'save'|trans }}</button>
-            {{ form_end(form) }}
-        </div>
     </div>
     <!-- /.conainer-fluid -->
 {% endblock %}
+
 {% block javascripts %}
     <script src="https://unpkg.com/vue"></script>
     <script>
