Admin/AddPoll: ajout d'une extension Twig + service Helper
Pour charger, convertir, et utiliser facilement les traductions Symfony pour Vuei18n

--- a/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
@@ -12,7 +12,10 @@
 
     <div id="app"></div>
 {% endblock %}
+
 {% block javascripts %}
+    {{ loadTranslationsForVueJS('admin-add-poll') }}
+
     <script>
       var FORM_ACTION = "{{ path(app.request.get('_route')) }}";
     </script>
