Ajout d'une fonction Twig: loadVariantsFromDatabase()

--- a/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/add.html.twig
@@ -17,6 +17,7 @@
 
 {% block javascripts %}
     {{ loadTranslationsForVueJS('admin-add-poll') }}
+    {{ loadVariantsFromDatabase() }}
 
     <script>
       var FORM_ACTION = "{{ path(app.request.get('_route')) }}";
