--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,140 +31,7 @@
         <h1>Nom de votre sondage</h1>
     </header>
     <div class="container">
-        <form action="">
-
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-block">
-                            <h2 class="card-title">Votre question n°1</h2>
-                            <hr>
-                            <div class="card-text">
-
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        Le texte à gauche
-                                    </div>
-                                    <div class="col-md-6"></div>
-                                    <div class="col-md-3 text-right">
-                                        Le texte à droite
-                                    </div>
-                                </div>
-                                <br>
-                                <div class="row">
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <label>
-                                                <input type="radio" name="optionsRadios" id="optionsRadios1">
-                                                <label for="optionsRadios1">1</label>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios2">
-                                            <label for="optionsRadios2">2 abc</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios3">
-                                            <label for="optionsRadios3">3 efg</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios4">
-                                            <label for="optionsRadios4">4</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios5">
-                                            <label for="optionsRadios5">5</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios6">
-                                            <label for="optionsRadios6">6</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios7">
-                                            <label for="optionsRadios7">7 lol</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios8">
-                                            <label for="optionsRadios8">8</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios9">
-                                            <label for="optionsRadios9">9</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios10">
-                                            <label for="optionsRadios10">10 dlaop</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios11">
-                                            <label for="optionsRadios11">11</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <div class="kdt-radio">
-                                            <input type="radio" name="optionsRadios" id="optionsRadios12">
-                                            <label for="optionsRadios12">12</label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-block">
-                            <h2 class="card-title">Votre question n°2</h2>
-                            <hr>
-                            <div class="card-text">
-
-                                <div class="checkbox kdt-checkbox">
-                                    <input type="checkbox" name="optionsCheckboxes" id="optionsCheckboxes1">
-                                    <label for="optionsCheckboxes1">1</label>
-                                </div>
-                                <div class="checkbox kdt-checkbox">
-                                    <input type="checkbox" name="optionsCheckboxes" id="optionsCheckboxes2">
-                                    <label for="optionsCheckboxes2">2 abc</label>
-                                </div>
-                                <div class="checkbox kdt-checkbox">
-                                    <input type="checkbox" name="optionsCheckboxes" id="optionsCheckboxes3">
-                                    <label for="optionsCheckboxes3">3 efg</label>
-                                </div>
-                                <div class="checkbox kdt-checkbox">
-                                    <input type="checkbox" name="optionsCheckboxes" id="optionsCheckboxes4">
-                                    <label for="optionsCheckboxes4">4</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="button" class="btn btn-send col-xs-12 float-right">Envoyer</button>
-                </div>
-            </div>
-        </form>
+        {% block content %}{% endblock %}
     </div>
     <footer>
         <img title="logo-iut" class="logo-iut" alt="logo-iut" src="{{ asset('front/assets/img/logo-iut.png') }}">
