added temporary poll creation in validation service TODO : REMOVE IT git add -A

--- a/src/AppBundle/Resources/views/AdminUI/Poll/index.html.twig
+++ b/src/AppBundle/Resources/views/AdminUI/Poll/index.html.twig
@@ -30,8 +30,10 @@
                     <td></td>
                     <td>
                         <button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i>&nbsp; Editer</button>
+                        <a href="{{ path('admin_delete_poll', {'id': poll.id}) }}">
                         <button type="button" class="btn btn-danger"><i class="fa fa-trash"></i>&nbsp; Supprimer
                         </button>
+                        </a>
                     </td>
                 </tr>
             {% endfor %}
