--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -8,8 +8,8 @@
                     <div class="card p-2">
                       
                         <form action="{{ path("fos_user_security_check") }}" method="post"  class="card-block">
-                            <h1>Login</h1>
-                            <p class="text-muted">Sign In to your account</p>
+                            <h1>{{ 'layout.login.title'|trans({}, 'FOSUserBundle') }}</h1>
+                            <p class="text-muted">{{ 'layout.login.long'|trans({}, 'FOSUserBundle') }}</p>
                             {% if error %}
                                 <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                             {% endif %}
@@ -33,7 +33,7 @@
                                     <input type="submit" id="_submit" class="btn btn-primary px-2" name="_submit" value="{{ 'security.login.submit'|trans }}" />
                                 </div>
                                 <div class="col-6 text-right">
-                                    <a href="{{ path('fos_user_resetting_request') }}" class="btn btn-link px-0">Forgot password?</a>
+                                    <a href="{{ path('fos_user_resetting_request') }}" class="btn btn-link px-0">{{ 'layout.login.password.forgot'|trans({}, 'FOSUserBundle') }}</a>
                                     
                                 </div>
                             </div>
@@ -42,9 +42,9 @@
                     <div class="card card-inverse card-primary py-3 hidden-md-down" style="width:44%">
                         <div class="card-block text-center">
                             <div>
-                                <h2>Sign up</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a href="{{ path('fos_user_registration_register') }}"class="btn btn-primary active mt-1">Register Now!</a>
+                                <h2>{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</h2>
+                                <p>{{ 'layout.register.explanation'|trans({}, 'FOSUserBundle') }}</p>
+                                <a href="{{ path('fos_user_registration_register') }}"class="btn btn-primary active mt-1">{{ 'layout.register.submit'|trans({}, 'FOSUserBundle') }}</a>
                             </div>
                         </div>
                     </div>
