--- a/src/AppBundle/Resources/views/backoffice/partial/_sidebar.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_sidebar.html.twig
@@ -1,6 +1,12 @@
 <div class="sidebar">
     <nav class="sidebar-nav">
         <ul class="nav">
+            <li class="nav-item">
+                <a href="{{ path('backoffice') }}" class="nav-link">
+                    <i class="icon-home"></i>
+                    Backoffice
+                </a>
+            </li>
             <li class="nav-item nav-dropdown open">
                 <a class="nav-link nav-dropdown-toggle" href="#">
                     <i class="icon-puzzle"></i> Sondages
