--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -3,3 +3,11 @@
 {% block fos_user_content %}
 {% include "FOSUserBundle::Registration/register_content.html.twig" %}
 {% endblock fos_user_content %}
+{% block javascripts %}
+    <script src='https://www.google.com/recaptcha/api.js' async defer></script>
+    <script>
+        function onSubmit(token) {
+            document.getElementById("fos_user_registration_register").submit();
+        }
+    </script>
+{% endblock javascripts %}
