--- a/web/CoreUI/css/style.css
+++ b/web/CoreUI/css/style.css
@@ -8812,3 +8812,6 @@ base-chart.chart {
     border-right-color: #f86c6b; }
   *[dir="rtl"] .callout-success {
     border-right-color: #4dbd74; }
+
+.grecaptcha-badge {
+  display: none; }
