--- a/src/AppBundle/Resources/views/backoffice/users/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/index.html.twig
@@ -10,6 +10,7 @@
             <th{% if pagination.isSorted('a.firstname') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Prénom', 'a.firstname') }}</th>
             <th{% if pagination.isSorted('a.lastname') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nom', 'a.lastname') }}</th>
             <th{% if pagination.isSorted('a.email') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Email', 'a.email') }}</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -20,6 +21,9 @@
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
                 <td>{{ user.email }}</td>
+                    <a href="{{ path('backoffice_users_delete', {'id': user.id}) }}"
+                       onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet utilisateur ?');"
+                       class="btn btn-danger">Supprimer</a>
             </tr>
         {% endfor %}
         </tbody>
