--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -55,6 +55,14 @@
             {% endif %}
             <!-- Main content -->
             <main class="main p-2">
+                {% for type, flash_messages in app.session.flashBag.all %}
+                    {% for flash_message in flash_messages %}
+                        <div class="alert alert-{{ type }}">
+                            {{ flash_message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+
                 {% block main %}{% endblock %}
             </main>
         </div>
