--- a/app/Resources/KnpPaginatorBundle/views/Pagination/twitter_bootstrap_v4_pagination.html.twig
+++ b/app/Resources/KnpPaginatorBundle/views/Pagination/twitter_bootstrap_v4_pagination.html.twig
@@ -12,7 +12,7 @@
 #}
 {% if pageCount > 1 %}
     <nav>
-        <ul class="pagination">
+        <ul class="pagination justify-content-center">
 
             {% if previous is defined %}
                 <li class="page-item">
