--- a/src/AppBundle/Resources/views/backoffice/users/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/index.html.twig
@@ -21,9 +21,13 @@
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
                 <td>{{ user.email }}</td>
+                <td>
+                    <a href="{{ path('backoffice_users_update', {'id': user.id}) }}"
+                       class="btn btn-primary">Modifier</a>
                     <a href="{{ path('backoffice_users_delete', {'id': user.id}) }}"
                        onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet utilisateur ?');"
                        class="btn btn-danger">Supprimer</a>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
