--- a/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
@@ -18,14 +18,14 @@
         {% endif %}
     </ul>
     <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item hidden-md-down">
+        <li class="nav-item hidden-md-down spaced-logout-btn">
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                <a href="{{ path('fos_user_security_logout') }}">
-                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
+                <a data-toggle="tooltip" data-placement="left" title="{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}" class="btn btn-primary btn-sm" href="{{ path('fos_user_security_logout') }}">
+                    <i class="fa fa-sign-out" aria-hidden="true"></i>
                 </a>
             {% else %}
-                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+                <a class="btn btn-primary btn-sm" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
             {% endif %}
         </li>
     </ul>
