--- a/src/AppBundle/Resources/views/backoffice/partial/_sidebar.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_sidebar.html.twig
@@ -4,7 +4,7 @@
             <li class="nav-item">
                 <a href="{{ path('backoffice') }}" class="nav-link">
                     <i class="icon-home"></i>
-                    Backoffice
+                    Accueil
                 </a>
             </li>
             <li class="nav-item nav-dropdown open">
