--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
     <body>
     <header>
         <img title="logo" class="logo" alt="logo" src="{{ asset('front/assets/img/logo.png') }}">
-        <h1>Nom de votre sondage</h1>
+        <h1>{% block poll_title %}Nom de votre sondage{% endblock %}</h1>
     </header>
     <div class="container">
         {% block content %}{% endblock %}
