Changement du domaine 'admin-add-poll' en 'admin-poll' + ajout trad'
- poll.update
- poll.updating

--- a/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    {{ loadTranslationsForVueJS('admin-add-poll') }}
+    {{ loadTranslationsForVueJS('admin-poll') }}
     {{ loadVariantsFromDatabase() }}
 
     <script>
