--- a/src/AppBundle/Resources/views/polls/answer.html.twig
+++ b/src/AppBundle/Resources/views/polls/answer.html.twig
@@ -66,7 +66,7 @@
 {% endblock %}
 
 {% block content %}
-    {{ form_start(pollView) }}
+    {{ form_start(pollView,{attr: {'novalidate':'novalidate'}}) }}
         {% for page in poll.pages %}
             <div class="row">
                 <div class="col"><h3 class="p-3">{{ page.title }}</h3></div>
