--- a/src/AppBundle/Resources/views/backoffice/poll/results.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/results.html.twig
@@ -4,8 +4,44 @@
 
 {% block main %}
     <div id="app">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-center">{{ poll.title }}</h1>
+            </div>
+        </div>
         {% for chart in charts %}
-            {{ chartjs_render_html(chart) }}
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">{{ chart.question.qTitle }}</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <table class="table table-bordered table-striped table-condensed">
+                        <thead>
+                        <tr>
+                            <th>Proposition</th>
+                            <th>Quantité</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for prop in chart.question.props %}
+                            <tr>
+                                <td>
+                                    {{ prop.title }}
+                                </td>
+                                <td>
+                                    {{ prop.amount }}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-6">
+                    {{ chartjs_render_html(chart.chart, 100, 100) }}
+                </div>
+            </div>
         {% endfor %}
     </div>
 
@@ -15,7 +51,7 @@
         <script>
             //            Chart.defaults.global.animation.duration = 0;
             {% for chart in charts %}
-                {{ chartjs_render_js(chart) }}
+                {{ chartjs_render_js(chart.chart) }}
             {% endfor %}
         </script>
         <!-- ChartJSEnd -->
